# rules_jvm_external

./: .bazelignore  .bazelrc  BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  coursier.bzl  defs.bzl  gradle.BUILD.bazel  lock.json  maven_install.json  non-module-deps.bzl  repositories.bzl  rules_jvm_external_deps_install.json
.bazelci/: presubmit.yml
.claude/: settings.local.json
examples/android_kotlin_app/: .bazelrc  BUILD  MODULE.bazel
examples/android_local_test/: WORKSPACE
examples/android_local_test/bazel/robolectric/: BUILD  gen_deps.py
examples/android_local_test/bazel/robolectric/main_deps/: dependencies.bzl
examples/android_local_test/bazel/robolectric/main_deps/backport-util-concurrent/backport-util-concurrent/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/classworlds/classworlds/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/com/almworks/sqlite4java/sqlite4java/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/com/google/guava/guava/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/com/google/protobuf/protobuf-java/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/com/ibm/icu/icu4j/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/com/thoughtworks/xstream/xstream/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/nekohtml/nekohtml/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/nekohtml/xercesMinimal/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/apache/ant/ant/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/apache/ant/ant-launcher/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/apache/maven/maven-ant-tasks/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/apache/maven/maven-artifact/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/apache/maven/maven-artifact-manager/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/bouncycastle/bcprov-jdk15on/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/hamcrest/hamcrest-core/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/hamcrest/hamcrest-library/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/android-all/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/annotations/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/junit/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/resources/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/robolectric/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/sandbox/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/shadowapi/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/shadows-framework/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/org/robolectric/utils/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/xmlpull/xmlpull/: BUILD.bazel
examples/android_local_test/bazel/robolectric/main_deps/xpp3/xpp3_min/: BUILD.bazel
examples/android_local_test/src/test/: AndroidManifest.xml  BUILD
examples/android_local_test/src/test/java/com/example/bazel/: MainActivityTest.java
examples/bzlmod/: MODULE.bazel  maven_install.json
examples/java-export/: .bazelrc  MODULE.bazel
examples/layering/child1/: MODULE.bazel
examples/layering/child2/: MODULE.bazel
examples/layering/root/: MODULE.bazel
extensions/: maven.bzl
private/: compat_repository.bzl
private/extensions/: download_pinned_deps.bzl  generate_pinned_repo.bzl  layering.bzl  maven.bzl  non-bzlmod-deps.bzl
private/lib/: artifacts.bzl
private/rules/: coursier.bzl  jvm_import.bzl  kt_jvm_export.bzl  maven_bom_fragment.bzl  pin_dependencies.bzl  v2_lock_file.bzl
private/tools/java/com/github/bazelbuild/rules_jvm_external/: BUILD
private/tools/java/com/github/bazelbuild/rules_jvm_external/coursier/: BUILD.bazel  LockFileConverter.java  NebulaFormat.java  V2Format.java
private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/: BUILD  Conflict.java  DependencyInfo.java  ResolutionResult.java
private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle2/plugin/: BUILD.bazel  CustomModelInjectionPlugin.java  OutgoingArtifactsModelBuilder.java  plugin.properties
private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle2/tapi/: App.java  BUILD.bazel  init.gradle
private/tools/java/org/gradle/demo/model/: BUILD.bazel
private/tools/java/org/gradle/demo/plugin/: BUILD.bazel  org.gradle.demo.plugin.custom.model.properties
private/tools/java/org/gradle/demo/tapi/: App.java  BUILD.bazel
scripts/: BUILD
tests/com/github/bazelbuild/rules_jvm_external/jar/: BUILD
tests/com/github/bazelbuild/rules_jvm_external/maven/: BUILD
tests/com/github/bazelbuild/rules_jvm_external/resolver/: BUILD.bazel  GradleResolverTest.java  MavenRepo.java  ResolverTestBase.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/gradle/: BUILD  BUILD.bazel  GradleBuildScriptGeneratorTestFixturesTest.java  GradleResolverTest.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/lockfile/: V2LockFileTest.java
tests/com/github/bazelbuild/rules_jvm_external/resolver/maven/: DownloaderTest.java
tests/custom_maven_install/: json_artifacts_testing_install.json  manifest_stamp_testing_install.json  maven_install.json  policy_pinned_testing_install.json  regression_testing_install.json  regression_testing_maven_install.json  unsafe_shared_cache_with_pinning_install.json
tests/integration/java_export/: BUILD
tests/integration/override_targets/: BUILD
tests/unit/: BUILD  artifacts_test.bzl  version_catalogs_test.bzl
(+44 files in other folders)
