module(
    name = "rules_jvm_external",
    version = "5.3",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_kotlin", version = "1.9.0")
archive_override(
    module_name = "rules_kotlin",
    strip_prefix = "rules_kotlin-8cb605b90a7ecb25e99237e6a4bd6bae7a3673d5",
    urls = ["https://github.com/bazelbuild/rules_kotlin/archive/8cb605b90a7ecb25e99237e6a4bd6bae7a3673d5.zip"],
)

maven = use_extension(":extensions.bzl", "maven")
maven.install(
    name = "rules_jvm_external_deps",
    artifacts = [
        "com.google.auth:google-auth-library-credentials:1.19.0",
        "com.google.auth:google-auth-library-oauth2-http:1.19.0",
        "com.google.cloud:google-cloud-core:2.22.0",
        "com.google.cloud:google-cloud-storage:2.26.1",
        "com.google.code.gson:gson:2.10.1",
        "com.google.googlejavaformat:google-java-format:1.17.0",
        "com.google.guava:guava:32.1.2-jre",
        "org.apache.maven:maven-artifact:3.9.4",
        "software.amazon.awssdk:s3:2.20.128",
    ],
    lock_file = "@rules_jvm_external//:rules_jvm_external_deps_install.json",
)
use_repo(
    maven,
    "rules_jvm_external_deps",
)

############# Dev dependencies below here

bazel_dep(name = "aspect_rules_js", version = "1.32.6", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.5.6", dev_dependency = True, repo_name = "io_bazel_stardoc")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    data = ["//:package.json"],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    quiet = False,
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
    yarn_lock = "//:yarn.lock",
)
use_repo(npm, "npm")
