load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_jvm_external//private/rules:jvm_import.bzl", "jvm_import")

java_library(
    name = "gradle",
    exports = [
        ":gradle-runtime-jars",
    ],
    visibility = [
        "//visibility:public",
    ],
)

GRADLE_VERSION = "7.6.4"
PREFIX = "gradle-bin/lib/"

KOTLIN_VERSION = "1.7.10"
NATIVE_VERSION = "0.22-milestone-25"

MODULES = [
    "gradle-base-annotations-%s.jar" % GRADLE_VERSION,
    "gradle-base-services-%s.jar" % GRADLE_VERSION,
    "gradle-build-operations-%s.jar" % GRADLE_VERSION,
    "gradle-core-%s.jar" % GRADLE_VERSION,
    "gradle-core-api-%s.jar" % GRADLE_VERSION,
    "gradle-enterprise-logging-%s.jar" % GRADLE_VERSION,
    "gradle-enterprise-workers-%s.jar" % GRADLE_VERSION,
    "gradle-logging-%s.jar" % GRADLE_VERSION,
    "gradle-logging-api-%s.jar" % GRADLE_VERSION,
    "gradle-messaging-%s.jar" % GRADLE_VERSION,
    "gradle-tooling-api-%s.jar" % GRADLE_VERSION,
]

RUNTIME_DEPS = [PREFIX + m for m in MODULES]

[
    java_import(
        name = jar.split("/")[-1],
        jars = [jar],
    )
    for jar in RUNTIME_DEPS
]

java_library(
    name = "gradle-runtime-jars",
    runtime_deps = [jar.split("/")[-1] for jar in RUNTIME_DEPS],
    exports = [jar.split("/")[-1] for jar in RUNTIME_DEPS],
)

jvm_import(
    name = "gradle-tooling-api",
    jars = [
        "lib/gradle-tooling-api-%s.jar" % GRADLE_VERSION,
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "distribution",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)

exports_files(
    ["gradle-bin/README"],
)
