module(name = "kotlin_android_example")

bazel_dep(name = "rules_android", version = "0.6.5")
bazel_dep(name = "rules_jvm_external", version = "0.0.0")
bazel_dep(name = "rules_kotlin", version = "2.1.8")

local_path_override(
    module_name = "rules_jvm_external",
    path = "../../",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.appcompat:appcompat:1.0.2",
        "androidx.core:core-ktx:1.0.1",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "kotlin_android_example",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")
