module(
    name = "layering_child2",
    version = "0.0",
)

bazel_dep(name = "rules_jvm_external", version = "0.0")
local_path_override(
    module_name = "rules_jvm_external",  # matches the name of the `bazel_dep`
    path = "../../..",
)

maven = use_extension("@rules_jvm_external//private/extensions:layering.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.code.gson:gson:2.12.0",
        "com.google.guava:guava:31.0.0-jre",
    ],
)
use_repo(maven, "maven")
