load("//:defs.bzl", "artifact")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_tools//tools/android:defs.bzl", "run_singlejar")
load("@rules_jvm_external//private/rules:jvm_import.bzl", "jvm_import")

copy_file(
    name = "plugin-properties",
    src = "plugin.properties",
    out = "META-INF/gradle-plugins/com.github.bazelbuild.rules_jvm_external.resolver.gradle2.model.properties",
)

java_library(
    name = "plugin-lib",
    srcs = glob(["*.java"]),
    resource_strip_prefix = package_name(),
    resources = [
        ":plugin-properties",
    ],
    deps = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle2/model",
        "@gradle",
        artifact(
            "javax.inject:javax.inject",
            repository_name = "rules_jvm_external_deps",
        ),
        artifact(
            "org.slf4j:slf4j-api",
            repository_name = "rules_jvm_external_deps",
        ),
    ],
)

run_singlejar(
    name = "plugin-singlejar",
    srcs = [
        ":plugin-lib",
    ],
    out = "bazel-rules-jvm-external-resolver-gradle-plugin.jar",
    include_prefixes = [
        "META-INF",
        "com",
    ],
)

jvm_import(
    name = "plugin",
    jars = ["plugin-singlejar"],
    visibility = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle2:__subpackages__",
    ],
)
