load("//:defs.bzl", "artifact")

java_library(
    name = "tapi",
    srcs = glob(["*.java"]),
    resources = [
        "init.gradle",
    ],
    deps = [
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle2/model",
        "//private/tools/java/com/github/bazelbuild/rules_jvm_external/resolver/gradle2/plugin",
        "@bazel_tools//tools/java/runfiles",
        "@gradle//:gradle-tooling-api",
    ],
)

java_binary(
    name = "inspector",
    data = [
        "@gradle//:distribution",
        "@gradle//:gradle-7.6/README",
    ],
    env = {"GRADLE_ROOT": "$(rlocationpath @gradle//:gradle-7.6/README)"},
    jvm_flags = [
        "-Dslf4j.internal.verbosity=ERROR",
    ],
    main_class = "com.github.bazelbuild.rules_jvm_external.resolver.gradle2.tapi.App",
    runtime_deps = [
        ":tapi",
        artifact(
            "com.google.guava:guava",
            repository_name = "rules_jvm_external_deps",
        ),
    ],
)
